--- a/src/main/resources/WaitingRoom.fxml
+++ b/src/main/resources/WaitingRoom.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,15 +9,16 @@
 
 <AnchorPane prefHeight="378.0" prefWidth="504.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.ControllerLogin">
    <children>
-      <ImageView fitHeight="396.0" fitWidth="529.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-17.0" AnchorPane.topAnchor="0.0">
+      <ImageView fx:id="waitingIm" fitHeight="396.0" fitWidth="529.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-12.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-17.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@Waiting_web.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="21.0" layoutY="56.0" prefHeight="82.0" prefWidth="498.0" text="RELAX AND WAITING FOR OTHER PLAYERS" textFill="WHITE">
+      <Label fx:id="relaxLabel" layoutX="21.0" layoutY="56.0" prefHeight="82.0" prefWidth="498.0" text="RELAX AND WAITING FOR OTHER PLAYERS" textFill="WHITE">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
+      <Button fx:id="closeWaiting" disable="true" layoutX="244.0" layoutY="322.0" mnemonicParsing="false" text="Button" visible="false" />
    </children>
 </AnchorPane>
