--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -2,32 +2,23 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<GridPane alignment="center" hgap="10" prefHeight="300.0" prefWidth="300.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.ControllerLogin">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints maxHeight="48.0" minHeight="34.0" prefHeight="36.0" />
-      <RowConstraints maxHeight="48.0" minHeight="34.0" prefHeight="36.0" />
-      <RowConstraints maxHeight="20.0" minHeight="6.0" prefHeight="18.0" />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
+<AnchorPane prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.ControllerLogin">
    <children>
-      <Button fx:id="login" contentDisplay="CENTER" mnemonicParsing="false" onAction="#loginButton" text="Login" GridPane.rowIndex="9" />
-      <TextField fx:id="username" promptText="UserName" />
-      <Label fx:id="status" prefHeight="36.0" prefWidth="149.0" GridPane.rowIndex="1" />
-      <TextField fx:id="matchID" prefHeight="58.0" prefWidth="149.0" promptText="Match ID (optional)" GridPane.rowIndex="2" />
+      <Button fx:id="login" layoutX="123.0" layoutY="254.0" mnemonicParsing="false" onAction="#loginButton" text="Login" />
+      <Label fx:id="status" layoutX="110.0" layoutY="226.0" prefHeight="25.0" prefWidth="72.0" />
+      <TextField fx:id="matchID" layoutX="76.0" layoutY="74.0" promptText="Match ID (optional)" />
+      <TextField fx:id="username" layoutX="76.0" layoutY="30.0" promptText="Username" />
+      <RadioButton fx:id="rbRmi" layoutX="78.0" layoutY="164.0" mnemonicParsing="false" text="RMI">
+         <toggleGroup>
+            <ToggleGroup fx:id="connectionType" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="rbSocket" layoutX="78.0" layoutY="196.0" mnemonicParsing="false" text="SOCKET" toggleGroup="$connectionType" />
+      <TextField fx:id="ipAddress" layoutX="95.0" layoutY="119.0" prefHeight="25.0" prefWidth="102.0" promptText="IP Address" />
    </children>
-</GridPane>
+</AnchorPane>
