--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -412,42 +412,15 @@
       <Button fx:id="cell30" layoutX="552.0" layoutY="402.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="110.0" prefWidth="99.0" />
       <Button fx:id="cell31" layoutX="547.0" layoutY="272.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="110.0" prefWidth="99.0" />
       <Button fx:id="cell32" layoutX="559.0" layoutY="144.0" mnemonicParsing="false" onAction="#sendCellMessage" prefHeight="94.0" prefWidth="99.0" />
-      <ImageView fx:id="ammoCell02" fitHeight="49.0" fitWidth="51.0" layoutX="182.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_042.png" />
-         </image></ImageView>
-      <ImageView fx:id="ammoCell00" fitHeight="49.0" fitWidth="51.0" layoutX="164.0" layoutY="442.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_042.png" />
-         </image></ImageView>
-      <ImageView fx:id="ammoCell10" fitHeight="49.0" fitWidth="51.0" layoutX="296.0" layoutY="448.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_0433.png" />
-         </image></ImageView>
-      <ImageView fx:id="ammoCell11" fitHeight="49.0" fitWidth="51.0" layoutX="307.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_0419.png" />
-         </image></ImageView>
-      <ImageView fx:id="ammoCell12" fitHeight="49.0" fitWidth="51.0" layoutX="309.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_043.png" />
-         </image></ImageView>
-      <ImageView fx:id="ammoCell21" fitHeight="49.0" fitWidth="51.0" layoutX="448.0" layoutY="307.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_0437.png" />
-         </image></ImageView>
-      <ImageView fx:id="ammoCell20" fitHeight="49.0" fitWidth="51.0" layoutX="444.0" layoutY="442.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_0416.png" />
-         </image></ImageView>
-      <ImageView fx:id="ammoCell31" fitHeight="49.0" fitWidth="51.0" layoutX="572.0" layoutY="307.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_0423.png" />
-         </image></ImageView>
-      <ImageView fx:id="ammoCell32" fitHeight="49.0" fitWidth="51.0" layoutX="584.0" layoutY="167.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@ammo/AD_ammo_044.png" />
-         </image></ImageView>
+      <ImageView fx:id="ammoCell02" fitHeight="49.0" fitWidth="51.0" layoutX="182.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell00" fitHeight="49.0" fitWidth="51.0" layoutX="164.0" layoutY="442.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell10" fitHeight="49.0" fitWidth="51.0" layoutX="296.0" layoutY="448.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell11" fitHeight="49.0" fitWidth="51.0" layoutX="307.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell12" fitHeight="49.0" fitWidth="51.0" layoutX="309.0" layoutY="169.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell21" fitHeight="49.0" fitWidth="51.0" layoutX="448.0" layoutY="307.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell20" fitHeight="49.0" fitWidth="51.0" layoutX="444.0" layoutY="442.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell31" fitHeight="49.0" fitWidth="51.0" layoutX="572.0" layoutY="307.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="ammoCell32" fitHeight="49.0" fitWidth="51.0" layoutX="584.0" layoutY="167.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="imRedWeapon1" fitHeight="72.0" fitWidth="106.0" layoutX="3.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="imRedWeapon2" fitHeight="72.0" fitWidth="106.0" layoutX="3.0" layoutY="306.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="imRedWeapon3" fitHeight="72.0" fitWidth="106.0" layoutX="3.0" layoutY="392.0" pickOnBounds="true" preserveRatio="true" />
