--- a/src/main/resources/Map1.fxml
+++ b/src/main/resources/Map1.fxml
@@ -13,9 +13,6 @@
 
 <AnchorPane fx:id="myContainer" prefHeight="705.0" prefWidth="1378.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.se2019.ui.Controller">
    <children>
-      <Button fx:id="moveButton" layoutX="70.0" layoutY="556.0" mnemonicParsing="false" onAction="#sendActionMessage" prefHeight="22.0" prefWidth="51.0" text="move" />
-      <Button fx:id="grabButton" layoutX="70.0" layoutY="589.0" mnemonicParsing="false" onAction="#sendActionMessage" prefHeight="25.0" prefWidth="51.0" text="grab" />
-      <Button fx:id="shootButton" layoutX="70.0" layoutY="622.0" mnemonicParsing="false" onAction="#sendActionMessage" prefHeight="25.0" prefWidth="51.0" text="shoot" />
       <ImageView fitHeight="710.0" fitWidth="1389.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0">
          <image>
             <Image url="@back.jpg" />
@@ -167,11 +164,11 @@
          <image>
             <Image url="@frenzyCharacters/frenzyCharacterViolet.png" />
          </image></ImageView>
-      <ImageView fx:id="possibleActions" fitHeight="192.0" fitWidth="75.0" layoutX="69.0" layoutY="518.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="possibleActions" fitHeight="192.0" fitWidth="75.0" layoutX="69.0" layoutY="518.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="imFirstPlayer" fitHeight="177.0" fitWidth="66.0" layoutY="531.0" pickOnBounds="true" preserveRatio="true" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
          <image>
-            <Image url="@frenzyCharacters/frenzyActionsBlue.png" />
+            <Image url="@characters/firstPlayer.png" />
          </image></ImageView>
-      <ImageView fx:id="imFirstPlayer" fitHeight="177.0" fitWidth="66.0" layoutY="531.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
       <TabPane fx:id="container2" layoutX="817.0" layoutY="5.0" prefHeight="359.0" prefWidth="564.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab fx:id="tabEnemy1">
@@ -191,7 +188,10 @@
                            <image>
                               <Image url="@emptyWeapon.jpg" />
                            </image></ImageView>
-                        <ImageView fx:id="enemy1First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy1First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                           <image>
+                              <Image url="@characters/firstPlayer.png" />
+                           </image></ImageView>
                         <ImageView fx:id="enemy1Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@characters/actionsYellow.jpg" />
@@ -232,7 +232,10 @@
                            <image>
                               <Image url="@emptyWeapon.jpg" />
                            </image></ImageView>
-                        <ImageView fx:id="enemy2First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy2First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                           <image>
+                              <Image url="@characters/firstPlayer.png" />
+                           </image></ImageView>
                         <ImageView fx:id="enemy2Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@characters/actionsGreen.jpg" />
@@ -273,7 +276,10 @@
                            <image>
                               <Image url="@emptyWeapon.jpg" />
                            </image></ImageView>
-                        <ImageView fx:id="enemy3First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy3First" fitHeight="128.0" fitWidth="49.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                           <image>
+                              <Image url="@characters/firstPlayer.png" />
+                           </image></ImageView>
                         <ImageView fx:id="enemy3Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@characters/actionsGrey.jpg" />
@@ -346,7 +352,10 @@
                            <image>
                               <Image url="@emptyWeapon.jpg" />
                            </image></ImageView>
-                        <ImageView fx:id="enemy4First" fitHeight="128.0" fitWidth="49.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fx:id="enemy4First" fitHeight="128.0" fitWidth="49.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                           <image>
+                              <Image url="@characters/firstPlayer.png" />
+                           </image></ImageView>
                         <ImageView fx:id="enemy4Actions" fitHeight="120.0" fitWidth="51.0" layoutX="53.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@characters/actionsViolet.jpg" />
@@ -629,5 +638,20 @@
       <Button fx:id="bFrenzyGrab1" disable="true" layoutX="70.0" layoutY="592.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" visible="false" />
       <Button fx:id="bFrenzyShoot2" disable="true" layoutX="70.0" layoutY="646.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" visible="false" />
       <Button fx:id="bFrenzyGrab2" disable="true" layoutX="70.0" layoutY="674.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" visible="false" />
+      <Button fx:id="moveButton" layoutX="70.0" layoutY="556.0" mnemonicParsing="false" onAction="#sendActionMessage" prefHeight="22.0" prefWidth="51.0" />
+      <Button fx:id="grabButton" layoutX="70.0" layoutY="589.0" mnemonicParsing="false" onAction="#sendActionMessage" prefHeight="25.0" prefWidth="51.0" />
+      <Button fx:id="shootButton" layoutX="70.0" layoutY="622.0" mnemonicParsing="false" onAction="#sendActionMessage" prefHeight="25.0" prefWidth="51.0" />
+      <ImageView fx:id="mark12" fitHeight="35.0" fitWidth="30.0" layoutX="160.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark11" fitHeight="35.0" fitWidth="30.0" layoutX="190.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark10" fitHeight="35.0" fitWidth="30.0" layoutX="220.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark9" fitHeight="35.0" fitWidth="30.0" layoutX="250.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark8" fitHeight="35.0" fitWidth="30.0" layoutX="280.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark7" fitHeight="35.0" fitWidth="30.0" layoutX="310.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark6" fitHeight="35.0" fitWidth="30.0" layoutX="340.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark5" fitHeight="35.0" fitWidth="30.0" layoutX="370.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark4" fitHeight="35.0" fitWidth="30.0" layoutX="400.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark3" fitHeight="35.0" fitWidth="30.0" layoutX="430.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark2" fitHeight="35.0" fitWidth="30.0" layoutX="460.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="mark1" fitHeight="35.0" fitWidth="30.0" layoutX="490.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
